--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ bcrypt==3.1.7
 cffi==1.14.0
 dateutils==0.6.8
 Django==3.0.6
+django-ckeditor==5.9.0
+django-js-asset==1.2.2
 Pillow==7.1.2
 pycparser==2.20
 python-dateutil==2.8.1
